feat(#4): weblogger implementation
